<?xml version="1.0"?>
<package>
  <name>transforms</name>
  <version>0.0.0</version>
  <description>The transforms package</description>

  <maintainer email="johanj4@kth.se">Johan Johansson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
